--- a/src/App.module.css
+++ b/src/App.module.css
@@ -14,6 +14,7 @@
   display: grid;
   grid-template-columns: 13em auto;
   grid-template-rows: 5em  auto 12em 15em;
+  background-color: #ffc71f;
 }
 
 .headerContainer {
@@ -39,7 +40,7 @@
 
 .informationContainer {
   grid-column: 1 / 3;
-  grid-row: 4 / 5;
+  grid-row: 3 / 4;
 }
 
 .logo {
@@ -90,7 +91,7 @@
 
   .informationContainer {
     grid-column: 1 / 3;
-    grid-row: 5 / 6;
+    grid-row: 3 / 4;
   }
 }
 
