--- a/src/Order/Summary.module.css
+++ b/src/Order/Summary.module.css
@@ -5,9 +5,9 @@
   text-align: right;
 }
 .submitInput {
-  background-color: rgb(21, 21, 71);
-  color: aliceblue;
-  font-size: 1.5em;
+  background-color: #fc850f;
+  color: black;
+  font-size: 3em;
   line-height: 2em;
   border-radius: 3em;
   padding: 0 2em;
